UI changes and adding components, learn section

--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,16 @@
-@import url('https://fonts.googleapis.com/css2?family=Ubuntu+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Ubuntu+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap");
 
-
+html {
+  min-height: 100vh;
+}
 body {
   margin: 0;
+  height: 100vh;
   overflow-y: hidden;
-  font-family: 'Ubuntu Mono', monospace;
+  font-family: "Ubuntu Mono", monospace;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+#root {
+  height: 100vh;
 }
