--- a/src/App.css
+++ b/src/App.css
@@ -1,37 +1,44 @@
 .app-heading {
-	font-weight: 700;
-	color: #343a40;
-	font-size: 50px;
+  font-weight: 700;
+  color: #343a40;
+  font-size: 50px;
+}
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 .App {
-	position: absolute;
-	height: 100vh;
-	width: 100vw;
-	transition: all 0.3s ease-in-out;
+  /* position: absolute;
+  height: 150%; */
+  width: 100vw;
+  transition: all 0.3s ease-in-out;
+  height: 100vh;
 }
 .dark {
-	background-color: #151515;
-	color: white;
+  background-color: #151515;
+  color: white;
+  height: 100vh;
 }
 
 @media screen and (max-width: 480px) {
-	.app-heading {
-		font-size: 30px;
-	}
-	.app-heading2 {
-		font-size: 20px;
-	}
+  .app-heading {
+    font-size: 30px;
+  }
+  .app-heading2 {
+    font-size: 20px;
+  }
 }
-.banner a{
-	text-decoration: none;
-    color: red;
-    font-weight: 700;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-	font-size: large;
-	font-family: 'Ubuntu Mono', monospace;
-	
+.banner a {
+  text-decoration: none;
+  color: red;
+  font-weight: 700;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-size: large;
+  font-family: "Ubuntu Mono", monospace;
 }
 
 .emojiFix {
-	font-weight: 100 !important;
+  font-weight: 100 !important;
 }
