--- a/src/components/TopicCard/topicCard.css
+++ b/src/components/TopicCard/topicCard.css
@@ -1,6 +1,8 @@
 .container-custom {
   overflow-y: scroll;
-  height: 64vh;
+  height: 100%;
+  padding-bottom: 10vh;
+  padding-right: 5vw;
 }
 .container::-webkit-scrollbar {
   width: 5px; /* width of the entire scrollbar */
@@ -62,13 +64,19 @@
   transform: scale(1.05);
 }
 
-
 .promotional-card {
   /* background: #9D50BB;  fallback for old browsers */
   /* background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab); */
-  
-  background: -webkit-linear-gradient(135deg,#6249c5 0%,#9882f3 100%,#9882f3 100%) no-repeat;  
-  background: linear-gradient(135deg,#6249c5 0%,#9882f3 100%,#9882f3 100%) no-repeat; 
+
+  background: -webkit-linear-gradient(
+      135deg,
+      #6249c5 0%,
+      #9882f3 100%,
+      #9882f3 100%
+    )
+    no-repeat;
+  background: linear-gradient(135deg, #6249c5 0%, #9882f3 100%, #9882f3 100%)
+    no-repeat;
   /* background: linear-gradient(to right, #00d2ff, #3a7bd5);  */
   background-size: 200% 200%;
 
@@ -76,7 +84,7 @@
   /* background: linear-gradient(135deg,#6249c5 0%,#9882f3 100%,#9882f3 100%) no-repeat; */
   /* background: #1e3c72;  /* fallback for old browsers */
   /* background: -webkit-linear-gradient(to right, #2a5298, #1e3c72);  /* Chrome 10-25, Safari 5.1-6 */
-  /* background: linear-gradient(to right, #2a5298, #1e3c72); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */ 
+  /* background: linear-gradient(to right, #2a5298, #1e3c72); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   border-radius: 15px;
   height: 90%;
   animation: gradient 15s ease infinite;
@@ -100,26 +108,14 @@
   text-align: center;
 }
 
-@media screen and (max-height: 650px) {
-  .container-custom {
-    height: 56vh;
-  }
-}
-
-@media screen and (max-height: 750px) {
-  .container-custom {
-    height: 54vh;
-  }
-}
-
 @keyframes gradient {
-	0% {
-		background-position: 0% 50%;
-	}
-	50% {
-		background-position: 100% 50%;
-	}
-	100% {
-		background-position: 0% 50%;
-	}
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
 }
